# 720project

./: .gitignore  CMakeLists.txt  CrispEdgeDetection.cpp  LABfeature.cpp  LABfeature.h  SobelEdgeDetection.cpp  dstretch.cpp  dstretch.h  eval_BSDS.sh  feature.h  run.sh
data/BSR/: extractGroundTruth.m  source.txt
data/BSR/bench/: bench_bsds500.m
data/BSR/bench/benchmarks/: boundaryBench.m
opencv_gpb/: CMakeLists.txt  README  gpb_main.exe.stackdump
opencv_gpb/include/gPb/: globalPb.h
opencv_gpb/include/sPb/: buildW.h
opencv_gpb/include/seg/: uvt.h
opencv_gpb/src/: main.cpp
opencv_gpb/src/gPb/: globalPb.cpp
opencv_gpb/src/sPb/: buildW.cpp  smatrix.cpp
