cmake_minimum_required(VERSION 2.8.4)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
project(CrispEdgeDetection)
find_package(OpenCV REQUIRED)
find_package(Boost COMPONENTS system filesystem REQUIRED)
add_subdirectory(opencv_gpb)
include_directories(opencv_gpb/include/gPb opencv_gpb/include/sPb opencv_gpb/include/seg)
add_executable(CrispEdgeDetection CrispEdgeDetection.cpp LABfeature.cpp dstretch.cpp)
target_link_libraries(CrispEdgeDetection ${OpenCV_LIBS} ${Boost_LIBRARIES} gpb)
add_executable(CannyEdgeDetection CannyEdgeDetection.cpp )
target_link_libraries(CannyEdgeDetection ${OpenCV_LIBS} ${Boost_LIBRARIES})
add_executable(SobelEdgeDetection SobelEdgeDetection.cpp )
target_link_libraries(SobelEdgeDetection ${OpenCV_LIBS} ${Boost_LIBRARIES})
