cmake_minimum_required(VERSION 2.8.4)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package(OpenCV REQUIRED)
find_package(Arpack REQUIRED)
link_directories("${ARPACK_PATH}")
link_directories("/cygdrive/c/cygwin/lib/gcc/i686-pc-cygwin/4.9.3")
include_directories(include/gPb include/sPb include/seg)
add_library(gpb src/gPb/globalPb.cpp src/gPb/Filters.cpp src/sPb/buildW.cpp src/sPb/ic.cpp src/sPb/affinity.cpp src/sPb/smatrix.cpp src/sPb/normCut.cpp src/seg/watershed.cpp src/seg/VisWatershed.cpp src/seg/contour2ucm.cpp src/seg/ucm_mean_pb.cpp src/seg/uvt.cpp)
target_link_libraries(gpb ${OpenCV_LIBS} arpack gfortran)
add_executable(gpb_main src/main.cpp)
target_link_libraries(gpb_main ${OpenCV_LIBS} gpb)
